--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,8 @@
 <h1>This is manual c to prove github</h1>
 <p>
 Credits
-1 Lexical Elements
+  
+1 Elements
   1.1 Identifiers
   1.2 Keywords
   1.3 Constants
