--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 <h1>This is manual c to prove github</h1>
 <p>
 Credits
-0 Introduction 
+0  <a href=”intro.html”>Introduction</a>
 1 Elements
   1.1 Identifiers
   1.2 Keywords
