--- a/intro.html
+++ b/intro.html
@@ -7,20 +7,20 @@
 <body>
 
 <h1>This is a introduction c</h1>
-<p>To translate, we use a program (a Unix command) called gcc. An example will be easier to understand:
+<p>To translate, we use a program (a Unix command) called gcc. An example will be easier to understand:</p>
 
-- To create the source program, and create a new file new01.c with a text editor (gedit)
+<p>- To create the source program, and create a new file new01.c with a text editor (gedit)</p>
 
-- Type in this file the following code
+<p>- Type in this file the following code</p>
 
-Don't forget to save the file. Leave the text editor open.
+<p>Don't forget to save the file. Leave the text editor open.</p>
 
-- Open a terminal, and change the directory to go to new01.c.
+<p>- Open a terminal, and change the directory to go to new01.c.</p>
 
-- In the terminal, type gcc new01.c -o new01
+<p>- In the terminal, type gcc new01.c -o new01</p>
 
-You just launched gcc asking it to read new01.c, translate it into instructions for the processor and put the result in a new01 file. 
-This is called compiling. If you type ls again, you will see a new01 file that did not exist before. - to run your program, stay in the terminal and type ./new01</p>
+<p>You just launched gcc asking it to read new01.c, translate it into instructions for the processor and put the result in a new01 file. </p>
+<p>This is called compiling. If you type ls again, you will see a new01 file that did not exist before. - to run your program, stay in the terminal and type ./new01</p>
 
 </body>
 </html>
