--- a/Index.html
+++ b/Index.html
@@ -7,26 +7,33 @@
 
 <h1>This is manual c to prove github</h1>
 <p>
-Credits
-0  <a href=”intro.html”>Introduction</a>
-1 Elements
-  1.1 Identifiers
-  1.2 Keywords
-  1.3 Constants
-    1.3.1 Integer Constants
-    1.3.2 Character Constants
-    1.3.3 Real Number Constants
-    1.3.4 String Constants
- 1.4 Operators
- 1.5 Separators
- 1.6 White Space
-2 Data Types
- 2.1 Primitive Data Types
-   2.1.1 Integer Types
-   2.1.2 Real Number Types
-   2.1.3 Complex Number Types
-   2.1.3.1 Standard Complex Number Types
-   2.1.3.2 GNU Extensions for Complex Number Types</p>
+<p>Credits</p>
+<p><a href=”intro.html”>0.Introduction</a></p>
+  
+<p><a href=”1.html”>1 Elements</a></p>
+  <p><a href=”1_1.html”>1.1 Identifiers</a></p>
+  <p><a href=”1_2.html”>1.2 Keywords</a></p>
+  <p><a href=”1_3.html”>1.3 Constants</a></p>
+  
+    <p><a href=”1_3_1.html”>1.3.1 Integer Constants</a></p>
+    <p><a href=”1_3_2.html”>1.3.2 Character Constants</a></p>
+    <p><a href=”1_3_3.html”>1.3.3 Real Number Constants</a></p>
+    <p><a href=”1_3_4.html”>1.3.4 String Constants</a></p>
+  
+ <p><a href=”1_4.html”>1.4 Operators</a></p>
+ <p><a href=”1_5.html”>1.5 Separators</a></p>
+ <p><a href=”1_5.html”>1.6 White Space</a></p>
+  
+<p><a href=”2.html”>2 Data Types</a></p>
+  
+ <p><a href=”2_1.html”>2.1 Primitive Data Types</a></p>
+  
+   <p><a href=”2_1_1.html”>2.1.1 Integer Types</a></p>
+   <p><a href=”2_1_2.html”>2.1.2 Real Number Types</a></p>
+   <p><a href=”2_1_3.html”>2.1.3 Complex Number Types</a></p>
+  
+      <p><a href=”2_1_3_1.html”>2.1.3.1 Standard Complex Number Types</a></p>
+      <p><a href=”2_1_3_2.html”>2.1.3.2 GNU Extensions for Complex Number Types</a></p>
 
 </body>
 </html>
