--- a/intro.html
+++ b/intro.html
@@ -5,22 +5,40 @@
 </head>
   <!-- coment-->
 <body>
+<div class="idc.box">
+  <p class="idc-titulo">Introduction manual c</p>
+  <ul class="idc-lista">
+    <li><a href="#index the C language"</a>
+      <ul>
+        <li><a href="#subindice1">1. Introduction to the C language</a></li>
+        <li><a href="#subindice2">2. Structure of a C program</a></li>
+        <li><a href="#subindice3">3. Scalar data types</a></li>
+        <li><a href="#subindice4">4. Basic operators</a></li>
+        <li><a href="#subindice5">5. Conditionals</a></li>
+        <li><a href="#subindice6">6. Iterations</a></li>
+        <li><a href="#subindice7">7. Introduction to I/O functions</a></li>
+        <li><a href="#subindice8">8. Arrays (vectors or matrices)</a></li>
+        <li><a href="#subindice9">9. Functions and arguments</a></li>
+      </ul>
+    </div>
 
+
+<div class="idc.box1">
+  
 <h1>This is a introduction c</h1>
+   
 <p>To translate, we use a program (a Unix command) called gcc. An example will be easier to understand:</p>
-
 <p>- To create the source program, and create a new file new01.c with a text editor (gedit)</p>
-
 <p>- Type in this file the following code</p>
-
 <p>Don't forget to save the file. Leave the text editor open.</p>
 
-<p>- Open a terminal, and change the directory to go to new01.c.</p>
+<p>- Open a terminal, and change the directory to go to new01.c</p>
 
 <p>- In the terminal, type gcc new01.c -o new01</p>
 
 <p>You just launched gcc asking it to read new01.c, translate it into instructions for the processor and put the result in a new01 file. </p>
 <p>This is called compiling. If you type ls again, you will see a new01 file that did not exist before. - to run your program, stay in the terminal and type ./new01</p>
-
+</div>
+  
 </body>
 </html>
