--- a/intro.html
+++ b/intro.html
@@ -27,7 +27,7 @@
   
 <h1>This is a introduction c</h1>
    
-<p>To translate, we use a program (a Unix command) called gcc. An example will be easier to understand:</p>
+<p class="idc-titulo">To translate, we use a program (a Unix command) called gcc. An example will be easier to understand:</p>
 <p>- To create the source program, and create a new file new01.c with a text editor (gedit)</p>
 <p>- Type in this file the following code</p>
 <p>Don't forget to save the file. Leave the text editor open.</p>
