--- a/tema1.html
+++ b/tema1.html
@@ -1,28 +1,44 @@
-auto
-while
-short
-goto
-do
-unsigned
-sizeof
-for
-default
-union
-return
-float
-continue
-typedef
-register
-extern
-char
-switch
-long
-entry
-case
-struct
-int
-else
-break
-static
-if
-double
+
+<!DOCTYPE html>
+<html lang="es-ES">
+  <head>
+    <meta charset="utf-8">
+    <title>keywords</title>
+  </head>
+  <body>
+    <p>
+      <lo>auto</lo>
+      <lo>while</lo>
+      <lo>short</lo>
+      <lo>goto</lo>
+      <lo>do</lo>
+      <lo>unsigned</lo>
+      <lo>sizeof</lo>
+      <lo>for</lo>
+      <lo>default</lo>
+      <lo>union</lo>
+      <lo>return</lo>
+      <lo>float</lo>
+      <lo>continue</lo>
+      <lo>typedef</lo>
+      <lo>register</lo>
+      <lo>extern</lo>
+      <lo>char</lo>
+      <lo>switch</lo>
+      <lo>long</lo>
+      <lo>entry</lo>
+      <lo>case</lo>
+      <lo>struct</lo>
+      <lo>int</lo>
+      <lo>else</lo>
+      <lo>break</lo>
+      <lo>static</lo>
+      <lo>if</lo>
+      <lo>double</lo>
+    
+    </p>
+  
+  </body>
+</html>
+
+
