--- a/tema2.html
+++ b/tema2.html
@@ -3,11 +3,11 @@
 <html lang="es-ES">
   <head>
     <meta charset="utf-8">
-    <title>tema2</title>
+    <title>Scalar data types</title>
   </head>
   <body>
     <p>
-   
+   A scalar is a single unit of data. Scalar data types are single-valued data types, that can be used for individual variables, constants, etc. 
     
     </p>
   
